changed curreny from dolar to euro

--- a/app/front/customer/filtered_menu_browsing.html
+++ b/app/front/customer/filtered_menu_browsing.html
@@ -303,7 +303,7 @@
                       </div>
                       <p class="text-sm text-gray-600 dark:text-gray-400 mt-2 flex-grow">Gouda cremoso, mozzarella, albahaca fresca y un chorrito de aceite de oliva sobre nuestra base de tomate exclusiva.</p>
                       <div class="flex justify-between items-center mt-4">
-                        <p class="text-lg font-bold text-primary">$14.99</p>
+                        <p class="text-lg font-bold text-primary">€14.99</p>
                         <button data-not-implemented
                           class="flex cursor-pointer items-center justify-center rounded-lg h-9 bg-primary text-[#181611] gap-2 text-sm font-bold px-4">Añadir al Carrito</button>
                       </div>
@@ -322,7 +322,7 @@
                       </div>
                       <p class="text-sm text-gray-600 dark:text-gray-400 mt-2 flex-grow">Pepperoni clásico con un toque. Cubierto con jalapeños y hojuelas de chile rojo.</p>
                       <div class="flex justify-between items-center mt-4">
-                        <p class="text-lg font-bold text-primary">$16.50</p>
+                        <p class="text-lg font-bold text-primary">€16.50</p>
                         <button data-not-implemented
                           class="flex cursor-pointer items-center justify-center rounded-lg h-9 bg-primary text-[#181611] gap-2 text-sm font-bold px-4">Añadir al Carrito</button>
                       </div>
@@ -342,7 +342,7 @@
                       </div>
                       <p class="text-sm text-gray-600 dark:text-gray-400 mt-2 flex-grow">Una mezcla vibrante de pimientos, cebollas, aceitunas y champiñones sobre una corteza crujiente sin gluten.</p>
                       <div class="flex justify-between items-center mt-4">
-                        <p class="text-lg font-bold text-primary">$17.00</p>
+                        <p class="text-lg font-bold text-primary">€17.00</p>
                         <button data-not-implemented
                           class="flex cursor-pointer items-center justify-center rounded-lg h-9 bg-primary text-[#181611] gap-2 text-sm font-bold px-4">Añadir al Carrito</button>
                       </div>
@@ -363,7 +363,7 @@
                       <h3 class="text-lg font-bold text-[#181611] dark:text-white">Fettuccine Alfredo Cremoso</h3>
                       <p class="text-sm text-gray-600 dark:text-gray-400 mt-2 flex-grow">Salsa rica y cremosa con queso parmesano y un toque de ajo, servida sobre fettuccine.</p>
                       <div class="flex justify-between items-center mt-4">
-                        <p class="text-lg font-bold text-primary">$15.50</p>
+                        <p class="text-lg font-bold text-primary">€15.50</p>
                         <button data-not-implemented
                           class="flex cursor-pointer items-center justify-center rounded-lg h-9 bg-primary text-[#181611] gap-2 text-sm font-bold px-4">Añadir al Carrito</button>
                       </div>
@@ -398,7 +398,7 @@
 
                       <footer class="flex items-center justify-between mt-4">
                         <div class="text-lg font-bold text-primary">
-                          <span class="sr-only">Precio: </span>$14.99
+                          <span class="sr-only">Precio: </span>€14.99
                         </div>
                         <button data-not-implemented aria-label="Añadir La Vida Gouda al carrito"
                           class="bg-primary/10 hover:bg-primary/20 text-primary border border-primary/50 font-bold py-2 px-6 rounded-lg transition-colors">
@@ -425,7 +425,7 @@
 
                       <footer class="flex items-center justify-between mt-4">
                         <div class="text-lg font-bold text-primary">
-                          <span class="sr-only">Precio: </span>$16.50
+                          <span class="sr-only">Precio: </span>€16.50
                         </div>
                         <button data-not-implemented aria-label="Añadir Pepperoni Picante al carrito"
                           class="bg-primary/10 hover:bg-primary/20 text-primary border border-primary/50 font-bold py-2 px-6 rounded-lg transition-colors">
@@ -452,7 +452,7 @@
 
                       <footer class="flex items-center justify-between mt-4">
                         <div class="text-lg font-bold text-primary">
-                          <span class="sr-only">Precio: </span>$17.00
+                          <span class="sr-only">Precio: </span>€17.00
                         </div>
                         <button data-not-implemented aria-label="Añadir Delicia Vegetal al carrito"
                           class="bg-primary/10 hover:bg-primary/20 text-primary border border-primary/50 font-bold py-2 px-6 rounded-lg transition-colors">
@@ -485,7 +485,7 @@
 
                       <footer class="flex items-center justify-between mt-4">
                         <div class="text-lg font-bold text-primary">
-                          <span class="sr-only">Precio: </span>$15.50
+                          <span class="sr-only">Precio: </span>€15.50
                         </div>
                         <button data-not-implemented aria-label="Añadir Fettuccine Alfredo Cremoso al carrito"
                           class="bg-primary/10 hover:bg-primary/20 text-primary border border-primary/50 font-bold py-2 px-6 rounded-lg transition-colors">
@@ -534,7 +534,7 @@
                         Pizza de queso con gouda, mozzarella y albahaca
                       </p>
                       <div class="flex items-center justify-between">
-                        <span class="text-3xl font-black text-primary">$14.99</span>
+                        <span class="text-3xl font-black text-primary">€14.99</span>
                         <button data-not-implemented
                           class="flex items-center gap-2 bg-primary hover:bg-primary/90 text-[#181611] font-bold px-6 py-3 rounded-xl text-lg shadow-lg hover:shadow-xl transition-all"
                           aria-label="Añadir La Vida Gouda al carrito">
@@ -571,7 +571,7 @@
                         Pizza de pepperoni con jalapeños y hojuelas de chile
                       </p>
                       <div class="flex items-center justify-between">
-                        <span class="text-3xl font-black text-primary">$16.50</span>
+                        <span class="text-3xl font-black text-primary">€16.50</span>
                         <button data-not-implemented
                           class="flex items-center gap-2 bg-primary hover:bg-primary/90 text-[#181611] font-bold px-6 py-3 rounded-xl text-lg shadow-lg hover:shadow-xl transition-all"
                           aria-label="Añadir Pepperoni Picante al carrito">
@@ -612,7 +612,7 @@
                         Pizza vegetal con pimientos, cebollas, aceitunas y champiñones
                       </p>
                       <div class="flex items-center justify-between">
-                        <span class="text-3xl font-black text-primary">$17.00</span>
+                        <span class="text-3xl font-black text-primary">€17.00</span>
                         <button data-not-implemented
                           class="flex items-center gap-2 bg-primary hover:bg-primary/90 text-[#181611] font-bold px-6 py-3 rounded-xl text-lg shadow-lg hover:shadow-xl transition-all"
                           aria-label="Añadir Delicia Vegetal al carrito">
@@ -655,7 +655,7 @@
                         Pasta cremosa con salsa de queso y ajo
                       </p>
                       <div class="flex items-center justify-between">
-                        <span class="text-3xl font-black text-primary">$15.50</span>
+                        <span class="text-3xl font-black text-primary">€15.50</span>
                         <button data-not-implemented
                           class="flex items-center gap-2 bg-primary hover:bg-primary/90 text-[#181611] font-bold px-6 py-3 rounded-xl text-lg shadow-lg hover:shadow-xl transition-all"
                           aria-label="Añadir Fettuccine Alfredo al carrito">
@@ -688,7 +688,7 @@
                         Espaguetis con salsa de tomate y hierbas
                       </p>
                       <div class="flex items-center justify-between">
-                        <span class="text-3xl font-black text-primary">$13.99</span>
+                        <span class="text-3xl font-black text-primary">€13.99</span>
                         <button data-not-implemented
                           class="flex items-center gap-2 bg-primary hover:bg-primary/90 text-[#181611] font-bold px-6 py-3 rounded-xl text-lg shadow-lg hover:shadow-xl transition-all"
                           aria-label="Añadir Espaguetis Marinara al carrito">
