Changed the color of manager's reservation page edit button's color from yellow to blue

--- a/app/front/manager/reservation_management.html
+++ b/app/front/manager/reservation_management.html
@@ -165,7 +165,7 @@
                       class="inline-flex items-center rounded-full bg-green-100 dark:bg-green-900/40 px-2.5 py-0.5 font-medium text-green-800 dark:text-green-300">Confirmada</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="/manager/edit_reservations">Editar</a>
+                    <a class="text-blue-600 hover:underline" href="/manager/edit_reservations">Editar</a>
                     <a class="ml-4 text-red-600 dark:text-red-500 hover:underline"
                       href="/manager/cancel_reservations">Cancelar</a>
                   </td>
@@ -181,7 +181,7 @@
                       class="inline-flex items-center rounded-full bg-green-100 dark:bg-green-900/40 px-2.5 py-0.5 font-medium text-green-800 dark:text-green-300">Confirmada</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="/manager/edit_reservations">Editar</a>
+                    <a class="text-blue-600 hover:underline" href="/manager/edit_reservations">Editar</a>
                     <a class="ml-4 text-red-600 dark:text-red-500 hover:underline"
                       href="/manager/cancel_reservations">Cancelar</a>
                   </td>
@@ -197,7 +197,7 @@
                       class="inline-flex items-center rounded-full bg-blue-100 dark:bg-blue-900/40 px-2.5 py-0.5 font-medium text-blue-800 dark:text-blue-300">En Mesa</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="/manager/edit_reservations">Editar</a>
+                    <a class="text-blue-600 hover:underline" href="/manager/edit_reservations">Editar</a>
                     <a class="ml-4 text-red-600 dark:text-red-500 hover:underline"
                       href="/manager/cancel_reservations">Cancelar</a>
                   </td>
@@ -213,7 +213,7 @@
                       class="inline-flex items-center rounded-full bg-gray-100 dark:bg-gray-700 px-2.5 py-0.5 font-medium text-gray-800 dark:text-gray-300">Completada</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="#" data-not-implemented>Detalles</a>
+                    <a class="text-blue-600 hover:underline" href="#" data-not-implemented>Detalles</a>
                   </td>
                 </tr>
               </tbody>
