--- a/app/front/login.html
+++ b/app/front/login.html
@@ -177,10 +177,15 @@
                     </a>
                   </div>
                 </div>
-                <div class="mt-2">
+                <div class="mt-2 relative">
                   <input autocomplete="current-password"
-                    class="block w-full rounded-lg border-0 py-3 text-text-primary shadow-sm ring-1 ring-inset ring-border-color placeholder:text-text-secondary focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6"
+                    class="block w-full rounded-lg border-0 py-3 pl-3 pr-10 text-text-primary shadow-sm ring-1 ring-inset ring-border-color placeholder:text-text-secondary focus:ring-2 focus:ring-inset focus:ring-primary-dark sm:text-sm sm:leading-6"
                     id="password" name="password" required type="password" />
+                  <button type="button" id="toggle-password"
+                    class="absolute inset-y-0 right-0 flex items-center pr-3 text-gray-500 hover:text-gray-700 focus:outline-none"
+                    onclick="togglePasswordVisibility('toggle-password', 'password')" aria-label="Show password">
+                    <span class="material-symbols-outlined">visibility</span>
+                  </button>
                 </div>
               </div>
 
@@ -348,6 +353,23 @@
     </div>
 
     <script>
+        // Toggle Password Visibility
+        function togglePasswordVisibility(toggleBtnId, inputId) {
+          const input = document.getElementById(inputId);
+          const btn = document.getElementById(toggleBtnId);
+          const icon = btn.querySelector('span');
+
+          if (input.type === "password") {
+            input.type = "text";
+            icon.textContent = "visibility_off";
+            btn.setAttribute('aria-label', 'Hide password');
+          } else {
+            input.type = "password";
+            icon.textContent = "visibility";
+            btn.setAttribute('aria-label', 'Show password');
+          }
+        }
+
         // Modal for "Not Implemented" links
         (function () {
           const style = document.createElement('style');
