Unified change from 12H format to 24H format in the whole app

--- a/app/front/customer/cheesy_dreams_homepage.html
+++ b/app/front/customer/cheesy_dreams_homepage.html
@@ -278,6 +278,7 @@
             <h3 class="text-lg font-bold">Cheesy Dreams</h3>
             <p class="text-sm text-text-muted-light dark:text-text-muted-dark">123 Calle del Queso, Ciudad Gastronómica, EE. UU.</p>
             <p class="text-sm text-text-muted-light dark:text-text-muted-dark">(555) 123-4567</p>
+            <p class="text-sm text-text-muted-light dark:text-text-muted-dark">Diario: 11:00 - 21:00</p>
           </div>
           <div class="flex items-center gap-4">
             <a aria-label="Cheesy Dreams en Instagram"
