--- a/app/front/customer/delivery_details_&_payment_2.html
+++ b/app/front/customer/delivery_details_&_payment_2.html
@@ -180,39 +180,39 @@
                   <label
                     class="cursor-pointer rounded-xl border border-[#e6e3db] dark:border-gray-600 p-4 text-center has-[:checked]:bg-primary/20 dark:has-[:checked]:bg-primary/30 has-[:checked]:border-primary dark:has-[:checked]:border-primary transition-colors"
                     for="time-1">
-                    <input class="sr-only" id="time-1" name="delivery-time" type="radio" value="5:30-6:00" />
-                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">5:30 PM - 6:00 PM</span>
+                    <input class="sr-only" id="time-1" name="delivery-time" type="radio" value="17:30-18:00" />
+                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">17:30 - 18:00</span>
                   </label>
                   <label
                     class="cursor-pointer rounded-xl border border-[#e6e3db] dark:border-gray-600 p-4 text-center has-[:checked]:bg-primary/20 dark:has-[:checked]:bg-primary/30 has-[:checked]:border-primary dark:has-[:checked]:border-primary transition-colors"
                     for="time-2">
-                    <input checked="" class="sr-only" id="time-2" name="delivery-time" type="radio" value="6:00-6:30" />
-                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">6:00 PM - 6:30 PM</span>
+                    <input checked="" class="sr-only" id="time-2" name="delivery-time" type="radio" value="18:00-18:30" />
+                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">18:00 - 18:30</span>
                   </label>
                   <label
                     class="cursor-pointer rounded-xl border border-[#e6e3db] dark:border-gray-600 p-4 text-center has-[:checked]:bg-primary/20 dark:has-[:checked]:bg-primary/30 has-[:checked]:border-primary dark:has-[:checked]:border-primary transition-colors"
                     for="time-3">
-                    <input class="sr-only" id="time-3" name="delivery-time" type="radio" value="6:30-7:00" />
-                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">6:30 PM - 7:00 PM</span>
+                    <input class="sr-only" id="time-3" name="delivery-time" type="radio" value="18:30-19:00" />
+                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">18:30 - 19:00</span>
                   </label>
                   <label
                     class="cursor-pointer rounded-xl border border-[#e6e3db] dark:border-gray-600 p-4 text-center has-[:checked]:bg-primary/20 dark:has-[:checked]:bg-primary/30 has-[:checked]:border-primary dark:has-[:checked]:border-primary transition-colors"
                     for="time-4">
-                    <input class="sr-only" id="time-4" name="delivery-time" type="radio" value="7:00-7:30" />
-                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">7:00 PM - 7:30 PM</span>
+                    <input class="sr-only" id="time-4" name="delivery-time" type="radio" value="19:00-19:30" />
+                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">19:00 - 19:30</span>
                   </label>
                   <label
                     class="cursor-pointer rounded-xl border border-[#e6e3db] dark:border-gray-600 p-4 text-center has-[:checked]:bg-primary/20 dark:has-[:checked]:bg-primary/30 has-[:checked]:border-primary dark:has-[:checked]:border-primary transition-colors"
                     for="time-5">
-                    <input class="sr-only" id="time-5" name="delivery-time" type="radio" value="7:30-8:00" />
-                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">7:30 PM - 8:00 PM</span>
+                    <input class="sr-only" id="time-5" name="delivery-time" type="radio" value="19:30-20:00" />
+                    <span class="block text-sm font-medium text-[#181611] dark:text-gray-200">19:30 - 20:00</span>
                   </label>
                   <label
                     class="cursor-pointer rounded-xl border border-[#e6e3db] dark:border-gray-600 p-4 text-center opacity-50 cursor-not-allowed"
                     for="time-6">
                     <input class="sr-only" disabled="" id="time-6" name="delivery-time" type="radio"
-                      value="8:00-8:30" />
-                    <span class="block text-sm font-medium text-[#8c805f] dark:text-gray-500">8:00 PM - 8:30 PM</span>
+                      value="20:00-20:30" />
+                    <span class="block text-sm font-medium text-[#8c805f] dark:text-gray-500">20:00 - 20:30</span>
                   </label>
                 </div>
               </fieldset>
