--- a/app/front/customer/delivery_order_confirmation.html
+++ b/app/front/customer/delivery_order_confirmation.html
@@ -128,7 +128,7 @@
               <div class="text-[#1c180d] dark:text-primary flex items-center justify-center shrink-0 size-10">
                 <span class="material-symbols-outlined text-3xl">schedule</span>
               </div>
-              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Entrega Estimada: 6:30 PM - 6:45 PM</p>
+              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Entrega Estimada: 18:30 - 18:45</p>
             </div>
             <div class="flex items-center gap-4 rounded-lg bg-gray-100 dark:bg-zinc-800 p-4">
               <div class="text-[#1c180d] dark:text-primary flex items-center justify-center shrink-0 size-10">
