--- a/app/front/customer/reservation_confirmation.html
+++ b/app/front/customer/reservation_confirmation.html
@@ -182,7 +182,7 @@
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-black/10 dark:border-b-white/10 py-5">
                 <p class="text-sm font-normal leading-normal text-black/60 dark:text-white/60">Hora</p>
-                <p id="reservation-time" class="text-sm font-medium leading-normal text-black dark:text-white text-right sm:text-left">7:30 PM</p>
+                <p id="reservation-time" class="text-sm font-medium leading-normal text-black dark:text-white text-right sm:text-left">19:30</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-black/10 dark:border-b-white/10 py-5">
                 <p class="text-sm font-normal leading-normal text-black/60 dark:text-white/60">Número de Invitados</p>
@@ -419,8 +419,8 @@
             console.log('Time updated to:', timeParam);
           } else {
             // Default to 7:00 PM if not provided
-            timeElement.textContent = '7:00 PM';
-            console.log('Using default time: 7:00 PM');
+            timeElement.textContent = '19:00';
+            console.log('Using default time: 19:00');
           }
           
           // Display guests
