--- a/app/front/customer/take_away_confirmation.html
+++ b/app/front/customer/take_away_confirmation.html
@@ -163,7 +163,7 @@
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-border-color py-5">
                 <p class="text-sm font-normal leading-normal text-text-secondary">Listo para recoger a las</p>
-                <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">7:30 PM</p>
+                <p class="text-sm font-medium leading-normal text-text-primary text-right sm:text-left">19:30</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-b border-b-border-color py-5">
                 <p class="text-sm font-normal leading-normal text-text-secondary">Nombre del Cliente</p>
