--- a/app/front/manager/cancel_reservation_confirmation.html
+++ b/app/front/manager/cancel_reservation_confirmation.html
@@ -128,7 +128,7 @@
             </div>
             <div class="col-span-2 grid grid-cols-subgrid p-4 border-b border-b-gray-200 dark:border-b-gray-700">
               <p class="text-sm font-medium text-gray-500 dark:text-gray-400">Fecha y Hora</p>
-              <p class="text-sm text-gray-900 dark:text-white text-right">26 de Octubre de 2024 a las 7:00 PM</p>
+              <p class="text-sm text-gray-900 dark:text-white text-right">26 de Octubre de 2024 a las 19:00</p>
             </div>
             <div class="col-span-2 grid grid-cols-subgrid p-4 border-b border-b-gray-200 dark:border-b-gray-700">
               <p class="text-sm font-medium text-gray-500 dark:text-gray-400">Invitados</p>
