--- a/app/front/manager/pending_reservation_screen.html
+++ b/app/front/manager/pending_reservation_screen.html
@@ -115,7 +115,7 @@
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Jordan Smith</td>
-                  <td class="px-6 py-4">26 de Oct, 7:30 PM</td>
+                  <td class="px-6 py-4">26 de Oct, 19:30</td>
                   <td class="px-6 py-4">4 invitados</td>
                   <td class="px-6 py-4">Celebrando un aniversario, mesa tranquila.</td>
                   <td class="px-6 py-4">
@@ -130,7 +130,7 @@
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Alex Johnson</td>
-                  <td class="px-6 py-4">26 de Oct, 8:00 PM</td>
+                  <td class="px-6 py-4">26 de Oct, 20:00</td>
                   <td class="px-6 py-4">2 invitados</td>
                   <td class="px-6 py-4">Sin peticiones especiales.</td>
                   <td class="px-6 py-4">
@@ -145,7 +145,7 @@
                 <tr
                   class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Casey Williams</td>
-                  <td class="px-6 py-4">27 de Oct, 6:00 PM</td>
+                  <td class="px-6 py-4">27 de Oct, 18:00</td>
                   <td class="px-6 py-4">6 invitados</td>
                   <td class="px-6 py-4">Se necesita silla alta para un niño pequeño.</td>
                   <td class="px-6 py-4">
@@ -159,7 +159,7 @@
                 </tr>
                 <tr class="bg-white dark:bg-slate-900 hover:bg-slate-50 dark:hover:bg-slate-800/50">
                   <td class="px-6 py-4 font-medium text-slate-900 whitespace-nowrap dark:text-white">Taylor Brown</td>
-                  <td class="px-6 py-4">27 de Oct, 9:00 PM</td>
+                  <td class="px-6 py-4">27 de Oct, 21:00</td>
                   <td class="px-6 py-4">3 invitados</td>
                   <td class="px-6 py-4">Alergia al gluten en el grupo.</td>
                   <td class="px-6 py-4">
