--- a/app/front/staff/checkout.html
+++ b/app/front/staff/checkout.html
@@ -161,7 +161,7 @@
         <main class="flex flex-1 flex-col items-center justify-center p-4 text-center">
             <h1
                 class="text-charcoal dark:text-white tracking-tight text-3xl md:text-4xl font-bold leading-tight px-4 pb-2 pt-6">
-                Martes, 20 de Agosto de 2024 | 09:02:15 AM</h1>
+                Martes, 20 de Agosto de 2024 | 09:02:15</h1>
             <div class="flex justify-center items-center gap-2 pb-4 pt-2 px-4">
                 <span class="text-gray-600 dark:text-gray-400 text-base font-normal">Estado:</span>
                 <span
@@ -197,8 +197,7 @@
                     <span class="material-symbols-outlined !text-4xl">task_alt</span>
                 </div>
                 <h2 class="text-2xl font-bold text-charcoal dark:text-white mb-2">¡Entrada Registrada!</h2>
-                <p class="text-gray-600 dark:text-gray-300 mb-6">Ha registrado su entrada exitosamente a las <strong>9:02:15
-                        AM</strong>.
+                <p class="text-gray-600 dark:text-gray-300 mb-6">Ha registrado su entrada exitosamente a las <strong>09:02:15</strong>.
                     ¡Que tenga un gran turno!</p>
                 <button
                     class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-primary text-charcoal text-base font-bold leading-normal tracking-[0.015em] hover:opacity-90 focus:outline-none focus:ring-4 focus:ring-primary/50">
