--- a/app/front/staff/reservations_staff.html
+++ b/app/front/staff/reservations_staff.html
@@ -223,7 +223,7 @@
               <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
                 <tr>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-900 dark:text-white">John Smith</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">7:30 PM</td>
+                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">19:30</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">4</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">12</td>
                   <td class="px-6 py-4 whitespace-nowrap">
@@ -246,7 +246,7 @@
                 </tr>
                 <tr>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-900 dark:text-white">Emily Johnson</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">7:15 PM</td>
+                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">19:15</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">2</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">8</td>
                   <td class="px-6 py-4 whitespace-nowrap">
@@ -269,7 +269,7 @@
                 </tr>
                 <tr>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-900 dark:text-white">Michael Davis</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">8:00 PM</td>
+                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">20:00</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">5</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">15</td>
                   <td class="px-6 py-4 whitespace-nowrap">
@@ -292,7 +292,7 @@
                 </tr>
                 <tr>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-900 dark:text-white">Jessica Brown</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">6:45 PM</td>
+                  <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">18:45</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">3</td>
                   <td class="px-6 py-4 whitespace-nowrap text-gray-500 dark:text-gray-400">5</td>
                   <td class="px-6 py-4 whitespace-nowrap">
