--- a/app/front/customer/table_&_reservation_confirmation.html
+++ b/app/front/customer/table_&_reservation_confirmation.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="flex flex-col gap-1 border-t border-solid border-border-light dark:border-border-dark py-4">
                   <p class="text-text-muted-light dark:text-text-muted-dark text-sm font-normal leading-normal">Hora</p>
-                  <p id="reservation-time" class="text-text-light dark:text-text-dark text-sm font-normal leading-normal">7:30 PM</p>
+                  <p id="reservation-time" class="text-text-light dark:text-text-dark text-sm font-normal leading-normal">19:30</p>
                 </div>
                 <div class="flex flex-col gap-1 border-t border-solid border-border-light dark:border-border-dark py-4">
                   <p class="text-text-muted-light dark:text-text-muted-dark text-sm font-normal leading-normal">Invitados
@@ -405,8 +405,8 @@
             console.log('Time updated to:', timeParam);
           } else {
             // Default to 7:00 PM if not provided
-            timeElement.textContent = '7:00 PM';
-            console.log('Using default time: 7:00 PM');
+            timeElement.textContent = '19:00';
+            console.log('Using default time: 19:00');
           }
           
           // Display guests
