--- a/app/front/customer/take-away_details_&_pickup_time.html
+++ b/app/front/customer/take-away_details_&_pickup_time.html
@@ -205,7 +205,7 @@
                     <input class="sr-only" id="30min" name="pickup-time" type="radio" value="30min" />
                     <div class="flex flex-col">
                       <span class="font-medium text-text-light dark:text-text-dark">En 30 min</span>
-                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Aprox. 6:30 PM</span>
+                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Aprox. 18:30</span>
                     </div>
                   </label>
                   <label
@@ -214,7 +214,7 @@
                     <input class="sr-only" id="1hr" name="pickup-time" type="radio" value="1hr" />
                     <div class="flex flex-col">
                       <span class="font-medium text-text-light dark:text-text-dark">En 1 hora</span>
-                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Aprox. 7:00 PM</span>
+                      <span class="text-sm text-text-muted-light dark:text-text-muted-dark">Aprox. 19:00</span>
                     </div>
                   </label>
                   <label
@@ -256,7 +256,7 @@
                 <span class="material-symbols-outlined text-primary text-xl mt-0.5">schedule</span>
                 <div>
                   <p class="font-semibold">Horario de Apertura</p>
-                  <p class="text-text-muted-light dark:text-text-muted-dark">Diario: 11:00 AM - 9:00 PM</p>
+                  <p class="text-text-muted-light dark:text-text-muted-dark">Diario: 11:00 - 21:00</p>
                 </div>
               </div>
             </div>
