--- a/app/front/manager/reservation_management.html
+++ b/app/front/manager/reservation_management.html
@@ -157,7 +157,7 @@
                 <tr class="hover:bg-gray-50 dark:hover:bg-white/5 cursor-pointer">
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-white">John Doe
                   </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">28 de Oct, 2024, 8:00 PM
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">28 de Oct, 2024, 20:00
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">4</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm">
@@ -173,7 +173,7 @@
                 <tr class="hover:bg-gray-50 dark:hover:bg-white/5 cursor-pointer">
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-white">Jane Cooper
                   </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">28 de Oct, 2024, 7:30 PM
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">28 de Oct, 2024, 19:30
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">2</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm">
@@ -189,7 +189,7 @@
                 <tr class="hover:bg-gray-50 dark:hover:bg-white/5 cursor-pointer">
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-white">Alice Smith
                   </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">28 de Oct, 2024, 6:00 PM
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">28 de Oct, 2024, 18:00
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">6</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm">
@@ -205,7 +205,7 @@
                 <tr class="hover:bg-gray-50 dark:hover:bg-white/5 cursor-pointer">
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-white">Bob Johnson
                   </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">27 de Oct, 2024, 9:00 PM
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">27 de Oct, 2024, 21:00
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600 dark:text-gray-400">5</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm">
